--- a/Evento/src/main/resources/application.properties
+++ b/Evento/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Evento
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://ep-falling-field-a41gjakk-pooler.us-east-1.aws.neon.tech/SkillSwap?sslmode=require
+spring.datasource.username=SkillSwap_owner
+spring.datasource.password=npg_6H8dUBybeMCw
