Configuración de "GitIgnore", además de la configuración de application.properties

--- a/Evento/src/main/resources/application.properties
+++ b/Evento/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.application.name=Evento
-server.port=8080
+spring.application.name=Usuario
 
-spring.datasource.url=jdbc:postgresql://ep-falling-field-a41gjakk-pooler.us-east-1.aws.neon.tech/SkillSwap?sslmode=require
-spring.datasource.username=SkillSwap_owner
-spring.datasource.password=npg_6H8dUBybeMCw
+# Configuración DB
+spring.datasource.url = ${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuración JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
