--- a/Evento/src/main/resources/application.properties
+++ b/Evento/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=Usuario
+spring.application.name=Evento
+server.port=8082
 
 # Configuración DB
 spring.datasource.url = ${DB_URL}
