--- a/Pedido/src/main/resources/application.properties
+++ b/Pedido/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=Usuario
+spring.application.name=Pedido
+server.port=8083
 
 # Configuración DB
 spring.datasource.url = ${DB_URL}
