--- a/Usuario/build.gradle
+++ b/Usuario/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	implementation 'net.datafaker:datafaker:2.4.2'
 	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 
 	compileOnly 'org.projectlombok:lombok'
