se corrige endpoint path variable case y se actualiza para que no genere error el test por el nombre

--- a/Usuario/src/main/resources/secrets-dev.properties
+++ b/Usuario/src/main/resources/secrets-dev.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://ep-falling-field-a41gjakk-pooler.us-east-1.aws.neon.tech:5432/SkillSwap?sslmode=require
+spring.datasource.url=jdbc:postgresql://ep-falling-field-a41gjakk-pooler.us-east-1.aws.neon.tech/SkillSwap?sslmode=require
 spring.datasource.username=SkillSwap_Buddy1
 spring.datasource.password=npg_MFz60NkstYuL
